# obi-greenhouse2

./: README.md  __init__.py  greenhouse.py  greenhouse2.py
templates/: .gitignore  @PROJECT@.sublime-project  CHANGELOG.md  CMakeLists.txt  README.md  baugen.sh  changelog  control  gitignore  oblong.cmake  project.yaml  rules  set-gspeak.sh  set-version.sh  three-feld.protein  three-screen.protein
templates/ci/: do-install-deps.osx  ob-set-defaults.conf
templates/debian/: .gitignore  changelog  control  rules
templates/src/: @PROJECT@.cpp
